--- a/index2.html
+++ b/index2.html
@@ -21,8 +21,8 @@
       <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
+        <a href="#education">Education</a>
         <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -80,6 +80,23 @@
         </div>
       </div>
     </section>
+    <section class="education" id="education">
+      <h2>Education</h2>
+      <div class="education-content">
+        <div class="education-item">
+          <h3>Bachelor's of Technology Information Technology</h3>
+          <p><strong>PSNA College of Engineering and Technology</strong></p>
+          <p>Nov 2021 - Present</p>
+          <p>CGPA: 7.93</p>
+        </div>
+        <div class="education-item">
+          <h3>Higher Secondary Education</h3>
+          <p><strong>SOUNDARARAJA VIDYALAYA CBSE</strong></p>
+          <p>10th Percentage: 81.6%</p>
+          <p>12th Percentage: 81.6%</p>
+        </div>
+      </div>
+    </section>
 
     <section class="skills" id="skills">
       <div class="skills-container">
@@ -115,24 +132,6 @@
               <div class="skill-per" per="55%"></div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="education" id="education">
-      <h2>Education</h2>
-      <div class="education-content">
-        <div class="education-item">
-          <h3>Bachelor's of Technology Information Technology</h3>
-          <p><strong>PSNA College of Engineering and Technology</strong></p>
-          <p>Nov 2021 - Present</p>
-          <p>CGPA: 7.93</p>
-        </div>
-        <div class="education-item">
-          <h3>Higher Secondary Education</h3>
-          <p><strong>SOUNDARARAJA VIDYALAYA CBSE</strong></p>
-          <p>10th Percentage: 81.6%</p>
-          <p>12th Percentage: 81.6%</p>
         </div>
       </div>
     </section>
